@@ -145,16 +145,8 @@ bool FixtureConsole::loadXML(QDomDocument* doc, QDomElement* root)
 		tag = node.toElement();
 		if (tag.tagName() == KXMLQLCWindowState)
 		{
-			x = tag.attribute(KXMLQLCWindowStateX).toInt();
-			y = tag.attribute(KXMLQLCWindowStateY).toInt();
-			w = tag.attribute(KXMLQLCWindowStateWidth).toInt();
-			h = tag.attribute(KXMLQLCWindowStateHeight).toInt();
-			
-			if (tag.attribute(KXMLQLCWindowStateVisible) == 
-			    Settings::trueValue())
-				visible = true;
-			else
-				visible = false;
+			FileHandler::loadXMLWindowState(&tag, &x, &y, &w, &h,
+							&visible);
 		}
 		else
 		{
